modules/home/waybar/style.css
/* ~/.config/waybar/style.css */
@import url("/home/anders/.cache/waybar-color.css");

/* Statusfältet */
#waybar {
    background: transparent;
    font-family: "JetBrains Mono", "Font Awesome 6 Free", sans-serif;
    font-size: 13px;
    padding: 0 8px;
}


#tray,
#clock,
#custom-set-random-wallpaper,
#idle_inhibitor,
#custom-resource-monitor,
#custom-network-vnstat,
#bluetooth,
#pulseaudio,
#custom-battery{
  min-width: 12px;
  margin: 0 7.5px;
}

#custom-battery,
#custom-network-vnstat,
#custom-battery {
  font-family: "JetBrains Mono Nerd Fonts", Arial, sans-serif;
}

tooltip {
  padding: 2px;
  color: #ffffff;
  background-color: #222222;
  border: 1px solid #444444;
  border-radius: 4px;
}

#workspaces button {
  border-radius: 4px;
  padding: 0 6px;
}
#workspaces button:hover {
  background: rgba(255, 255, 255, 0.15);
}
#workspaces button.active {
  background: rgba(255, 255, 255, 0.25);
}

#custom-resource-monitor.fa-icon {
  font-family: "Font Awesome 6 Free";
  font-weight: 900; /* Solid variant */
}

